fix: prevent note title pin overlap

--- a/src/app/components/notes/notes.component.scss
+++ b/src/app/components/notes/notes.component.scss
@@ -184,7 +184,7 @@
   .title {
     @extend %note;
     min-height: 38px;
-    margin: 12px 16px 0 16px;
+    margin: 12px 44px 0 16px;
     letter-spacing: 0.00625em;
     font-family: "Google Sans";
     font-size: 1rem;
@@ -711,7 +711,7 @@
     .title {
       font-size: 0.875rem;
       min-height: 28px;
-      margin: 8px 10px 0 10px;
+      margin: 8px 42px 0 10px;
       -webkit-line-clamp: 2;
     }
 
